--- a/Weitianshi/pages/bigData/projectLib/projectLib.wxml
+++ b/Weitianshi/pages/bigData/projectLib/projectLib.wxml
@@ -4,7 +4,7 @@
 <!--筛选  -->
 <template is='search' data='{{SearchInit,linkDataShow,currentTab,hidden:true}}'></template>
 <!--项目列表  -->
-<scroll-view id='projectLib' scroll-top='{{scrollTop}}' scroll-y>
+<scroll-view id='projectLib' scroll-top='{{scrollTop}}' scroll-y bindscrolltolower='loadMore'>
   <block wx:for="{{projectList}}" wx:key="{{index}}">
     <template is='bigDataProject' data='{{item}}'></template>
   </block>
