--- a/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxss
+++ b/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxss
@@ -1,1 +1,140 @@
-/* pages/activity_detailPreview/activity_detailPreview.wxss */
+.activityBox {
+  padding: 32rpx;
+  background: white;
+}
+
+.topBox {
+  margin-bottom: 32rpx;
+}
+
+.activityBox .activityPic {
+  height: 120rpx;
+  width: 180rpx;
+  background: blue;
+  margin-right: 24rpx;
+}
+
+.activityBox .activityContent {
+  font-size: 32rpx;
+  color: #333;
+  max-width: 482rpx;
+}
+
+.activityBox .middleLine {
+  height: 1rpx;
+  background: #f0f0f0;
+  width: 100%;
+}
+
+.activityBox .bottomPic {
+  margin-right: 12rpx;
+  height: 48rpx;
+  width: 48rpx;
+  border-radius: 100%;
+  background: pink;
+}
+
+.activityBox .bottomBox {
+  margin-top: 32rpx;
+  justify-content: space-between;
+  font-family: PingFangSC-Regular;
+  font-size: 24rpx;
+  color: #999;
+}
+
+.outBox {
+  padding: 32rpx;
+  margin-top: 32rpx;
+  background: white;
+}
+
+.baseIntro {
+  font-size: 30rpx;
+  color: #333;
+  margin-bottom: 40rpx;
+  font-weight: bold;
+}
+
+.baseTime, .baseArea, .baseWho, .baseIndustry {
+  font-size: 28rpx;
+  color: #999;
+  margin-bottom: 32rpx;
+}
+
+.baseIndustry {
+  margin-bottom: 0;
+}
+
+.baseTitle {
+  font-size: 28rpx;
+  color: #999;
+  margin-right: 32rpx;
+}
+
+.baseContent {
+  font-size: 28rpx;
+  color: #333;
+  max-width: 570rpx;
+}
+
+/*活动详情  */
+
+.activityContent {
+  font-size: 28rpx;
+  color: #333;
+  line-height: 44rpx;
+}
+
+.activityPic {
+  /* height: 100%; *//* width: 100%; */
+  height: 198px;
+  width: 343px;
+  background: orangered;
+  margin-bottom: 32rpx;
+}
+
+.aboutNetwork {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 104rpx;
+  line-height: 104rpx;
+  font-size: 20rpx;
+  color: #333;
+  background: #fff;
+  border-top: 0.5rpx solid #f0f0f0;
+}
+
+.flexBox {
+  display: flex;
+  position: relative;
+  background: #fff;
+}
+
+.shopPic {
+  width: 38rpx;
+  height: 36rpx;
+  position: absolute;
+  top: 16rpx;
+  left: 64rpx;
+}
+
+.shopBlock {
+  width: 172rpx;
+  text-align: center;
+  padding-top: 64rpx;
+  line-height: 22rpx;
+  font-size: 20rpx;
+  color: #333;
+  border: none;
+  /* background: #fff; */
+}
+
+.creatProject {
+  font-size: 30rpx;
+  color: #fff;
+  text-align: center;
+  background: #e43d59;
+  width: 236rpx;
+}
