--- a/Weitianshi/pages/discoverProject/discoverProject.wxss
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxss
@@ -313,10 +313,10 @@
   white-space: nowrap;
   margin-bottom: 20rpx;
 }
-
+/* 
 .otherInfo {
   margin-bottom: 44rpx;
-}
+} */
 
 .allProjectDetail {
   font-size: 26rpx;
