--- a/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxml
+++ b/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxml
@@ -1,13 +1,13 @@
 <view class="activityBox">
   <view class="topBox flex">
-    <view class="activityPic"></view>
-    <!-- <view class="activityPic"></view> -->
-    <view class="activityContent">全国城市合伙人招募计划暨股权投资机器人Angel 1.0 beta版小型发布会</view>
+    <view class="activityPic" wx:if="{{!data.main_image}}"></view>
+     <image class="activityPic" src='{{data.main_image}}' wx:if="{{data.main_image}}"></image> 
+    <view class="activityContent">{{data.activity_title}}</view>
   </view>
   <view class="middleLine"></view>
   <view class='bottomBox flex'>
     <view class="bottomPic"></view>
-    <view class="bottomNum">已报名400人</view>
+    <view class="bottomNum">已报名{{data.apply_count}}人</view>
   </view>
 </view>
 <!--基本介绍  -->
@@ -16,21 +16,21 @@
   <view class="baseTime flex">
     <view class="baseTitle">时
       <text space='true' decode='true'>&nbsp;&nbsp;</text>间</view>
-    <view class="baseContent">2018-01-18 14:00 ~ 2018 01-19 17:00</view>
+    <view class="baseContent">{{data.start_time}} ~ {{data.end_time}}</view>
   </view>
   <view class="baseArea flex">
     <view class="baseTitle">地
       <text space='true' decode='true'>&nbsp;&nbsp;</text>点</view>
-    <view class="baseContent">浙江省杭州市西湖区文三路90号东部软件园创新大厦一楼智云社</view>
+    <view class="baseContent">{{data.activity_address}}</view>
   </view>
   <view class="baseWho flex">
     <view class="baseTitle">主办方</view>
-    <view class="baseContent">浙江省杭州市西湖区文三路90号东部软件园创新大厦一楼智云社</view>
+    <view class="baseContent">{{data.activity_user}}</view>
   </view>
   <view class="baseIndustry flex">
     <view class="baseTitle">行
       <text space='true' decode='true'>&nbsp;&nbsp;</text>业</view>
-    <view class="baseContent">微天使乐投平台</view>
+    <view class="baseContent">{{data.industry}}</view>
   </view>
 </view>
 <!--活动详情  -->
@@ -48,12 +48,12 @@
 <view style="height:104rpx;width:100%"></view>
 
 <view class="flex aboutNetwork">
-  <view class="flexBox" hover-class="t-hoverColor" catchtap="toShareShop">
+  <view class="flexBox" hover-class="t-hoverColor" catchtap="toWTS">
     <image src='/img/icon-erweima12.png' class='shopPic'></image>
     <view class='shopBlock'>进入微天使</view>
   </view>
   <view class="t-line"></view>
-  <view class="flexBox" bindtap="decorate" hover-class="t-hoverColor">
+  <view class="flexBox" bindtap="publishActive" hover-class="t-hoverColor">
     <image src='/img/icon-dianpu@2x.png' class='shopPic'></image>
     <view class='shopBlock'>发布活动</view>
   </view>
@@ -64,5 +64,9 @@
       分享</button>
   </view>
   <view class="t-line"></view>
-  <view bindtap="editDetail" class='creatProject' hover-class="t-redColor">报名</view>
+  <view catchtap="signIn" class='creatProject' hover-class="t-redColor">报名</view>
+  
+  <view class='creatProject' hover-class="t-redColor">已报名</view>
+  
+  <view class='creatProject' hover-class="t-redColor">结束</view>
 </view>
