--- a/Weitianshi/activitySignIn/pages/projectList/projectList.wxml
+++ b/Weitianshi/activitySignIn/pages/projectList/projectList.wxml
@@ -1,7 +1,7 @@
 <import src="/pages/Template/Template.wxml" />
-88888
+<include src='/utils/wxml/common' />
 <!-- <view wx:if="{{nonet}}"> -->
-  <scroll-view bindscrolltolower="loadMore" scroll-top="{{scroll}}" scroll-y="true">
+  <scroll-view bindscrolltolower="loadMore"  style="height:1108rpx;" scroll-y="true">
     <template is="personModal" data="{{list:applyList,type:1,push_id:0}}"></template>
     <template is="hasNothing" data="{{emptyNumber:applyList}}"></template>
     <template is="theBottom" wx:if="{{atBottom == true}}"></template>
