--- a/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxml
+++ b/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxml
@@ -1,49 +1,59 @@
 <view class="activityBox">
   <view class="topBox flex">
     <view class="activityPic" wx:if="{{!data.main_image}}"></view>
-     <image class="activityPic" src='{{data.main_image}}' wx:if="{{data.main_image}}"></image> 
+    <image class="activityPic" src='{{data.main_image}}' wx:if="{{data.main_image}}"></image>
+    <image class="picThing" wx:if="{{data.is_end == 0}}" src='/img/img-baomingzhong@2x.png'></image>
+    <image class="picThing" wx:if="{{data.is_end == 1}}" src='/img/img-yijieshu@2x.png'></image>
     <view class="activityContent">{{data.activity_title}}</view>
   </view>
   <view class="middleLine"></view>
   <view class='bottomBox flex' bindtap='personList'>
-    <view class="bottomPic"></view>
-    <view class="bottomNum">已报名{{data.apply_count}}人</view>
+    <view class='flex'>
+      <block wx:for="{{data.apply}}" wx:key="{{index}}">
+        <view class="bottomPic" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
+        <image class="noBottomPic" wx:if="{{item.user_avatar_url}}" src='{{item.user_avatar_url}}'></image>
+      </block>
+    </view>
+    <view class="flex">
+      <view class="bottomNum">已报名{{data.apply_count}}人</view>
+      <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+    </view>
   </view>
 </view>
 <!--基本介绍  -->
-<view class="outBox">
+<view class="outBox"  wx:if="{{data.start_time || data.end_time||data.activity_address||data.activity_user ||data.industry}}">
   <view class="baseIntro">基本介绍</view>
-  <view class="baseTime flex">
+  <view class="baseTime flex" wx:if="{{data.activity_address||data.end_time}}">
     <view class="baseTitle">时
       <text space='true' decode='true'>&nbsp;&nbsp;</text>间</view>
     <view class="baseContent">{{data.start_time}} ~ {{data.end_time}}</view>
   </view>
-  <view class="baseArea flex">
+  <view class="baseArea flex" wx:if="{{data.activity_address}}">
     <view class="baseTitle">地
       <text space='true' decode='true'>&nbsp;&nbsp;</text>点</view>
     <view class="baseContent">{{data.activity_address}}</view>
   </view>
-  <view class="baseWho flex">
+  <view class="baseWho flex" wx:if="{{data.activity_user}}">
     <view class="baseTitle">主办方</view>
     <view class="baseContent">{{data.activity_user}}</view>
   </view>
-  <view class="baseIndustry flex">
+  <view class="baseIndustry flex" wx:if="{{data.industry}}">
     <view class="baseTitle">行
       <text space='true' decode='true'>&nbsp;&nbsp;</text>业</view>
     <view class="baseContent">{{data.industry}}</view>
   </view>
 </view>
 <!--活动详情  -->
-<view class="outBox">
+<view class="outBox" wx:if="{{hasThing}}">
   <view class="baseIntro">活动详情</view>
-  <view class='activityContent'>
-    <label> 100个创投机器人免费接入嗟开抢啦!现在报名，马上赋能公众号。</label>
-    <label>你可以得到什么?</label>
-  </view>
-  <view class="activityPic"></view>
-  <view class='activityContent'>
-    100个创投机器人免费接入嗟开抢啦!现在报名，马上赋能公众号。
-  </view>
+  <block wx:for="{{data.detail}}" wx:key="{{index}}">
+    <view class='activityContent' wx:if="{{item.description}}">
+      <label>{{item.description}}</label>
+    </view>
+    <block wx:for="{{item.image}}" wx:for-item="imageList" wx:key="{{index}}">
+      <image src="{{imageList.image_src}}" class="activityPic" wx:if="{{imageList.image_src}}"></image>
+    </block>
+  </block>
 </view>
 <view style="height:104rpx;width:100%"></view>
 
@@ -64,9 +74,9 @@
       分享</button>
   </view>
   <view class="t-line"></view>
-  <view catchtap="signIn" class='creatProject' hover-class="t-redColor">报名</view>
-  
-  <view class='creatProject' hover-class="t-redColor">已报名</view>
-  
-  <view class='creatProject' hover-class="t-redColor">结束</view>
+  <view catchtap="signIn" class='creatProject' hover-class="t-redColor" wx:if="{{data.is_end == 0 && data.is_apply == false}}">报名</view>
+
+  <view class='createdProject' wx:if="{{data.is_end == 0 && data.is_apply}}">已报名</view>
+
+  <view class='createdProject' wx:if="{{data.is_end == 1}}">结束</view>
 </view>
