--- a/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxss
+++ b/Weitianshi/activitySignIn/pages/activityDetail/activityDetail.wxss
@@ -10,7 +10,6 @@
 .activityBox .activityPic {
   height: 120rpx;
   width: 180rpx;
-  background: blue;
   margin-right: 24rpx;
 }
 
@@ -27,11 +26,19 @@
 }
 
 .activityBox .bottomPic {
-  margin-right: 12rpx;
+  margin-right: 6rpx;
   height: 48rpx;
   width: 48rpx;
   border-radius: 100%;
-  background: pink;
+  text-align: center;
+  line-height: 48rpx;
+  background: #f0f0f0;
+}
+.activityBox .noBottomPic {
+  margin-right: 6rpx;
+  height: 48rpx;
+  width: 48rpx;
+  border-radius: 100%;
 }
 
 .activityBox .bottomBox {
@@ -86,10 +93,8 @@
 }
 
 .activityPic {
-  /* height: 100%; *//* width: 100%; */
-  height: 198px;
-  width: 343px;
-  background: orangered;
+  height: 396rpx;
+  width: 686rpx;
   margin-bottom: 32rpx;
 }
 
@@ -137,4 +142,28 @@
   text-align: center;
   background: #e43d59;
   width: 236rpx;
+}
+
+.picThing {
+  position: absolute;
+  top: 20rpx;
+  left: 16rpx;
+  height: 36rpx;
+  width: 74rpx;
+  z-index: 9999;
+}
+
+.createdProject {
+  font-size: 30rpx;
+  color: #fff;
+  text-align: center;
+  background: #ccc;
+  width: 236rpx;
+}
+.arrowStyle {
+  margin-top: 8rpx;
+  width: 12rpx;
+  height: 20rpx;
+  /* padding: 6rpx 0; */
+  margin-left: 16rpx;
 }
