--- a/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxss
+++ b/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxss
@@ -1,5 +1,3 @@
-
-
 .visitCard {
   background: #fff;
   width: 91.5%;
@@ -57,7 +55,8 @@
 }
 
 .userNameContent, .userPhoneContent, .userBrandContent, .userCompanyContent,
-.userPositionContent, .userEmailContent, .userDescribeContent, .investContent,.userWx,.userPhone {
+.userPositionContent, .userEmailContent, .userDescribeContent, .investContent,
+.userWx, .userPhone {
   justify-content: space-between;
   margin: 0 32rpx;
   border-bottom: 1rpx solid #e6e6e6;
@@ -130,7 +129,7 @@
   color: #666;
   line-height: 112rpx;
   text-align: right;
-   text-overflow: ellipsis;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   margin-right: 12rpx;
@@ -141,10 +140,9 @@
   white-space: nowrap;
   overflow: hidden;
   width: 470rpx;
-  /* display: inline-block; */
-    /* flex-direction: row;
+  /* display: inline-block; *//* flex-direction: row;
   justify-content:flex-end;  */
-   float:right; 
+  float: right;
   /* flex-wrap:nowrap;  */
 }
 
@@ -161,14 +159,17 @@
   padding: 16rpx 32rpx;
   font-size: 28rpx;
   color: #fff;
-  }
-.teleBox{
+}
+
+.teleBox {
   margin-bottom: 16rpx;
 }
-.userPhone{
+
+.userPhone {
   border: none;
 }
-.personList .userWx{
+
+.personList .userWx {
   border: none;
 }
 
@@ -179,6 +180,7 @@
   margin: 0 32rpx;
   height: 114rpx;
   border-bottom: 1rpx solid #f0f0f0;
+  position: relative;
 }
 
 .noBorder {
@@ -189,6 +191,18 @@
   font-size: 32rpx;
   color: #333;
   line-height: 112rpx;
+}
+
+.newBoxs {
+  text-align: right;
+  height: 112rpx;
+  line-height: 112rpx;
+  font-size: 28rpx;
+  color: #333;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-right: 200rpx;
 }
 
 .newBox {
@@ -202,9 +216,40 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.boxStyle{
+
+.boxStyle {
   background: #fff;
 }
-.bottomStyle{
-  margin-bottom:24rpx;
+
+.bottomStyle {
+  margin-bottom: 24rpx;
+}
+
+/*验证码按钮*/
+
+.getCode {
+  position: absolute;
+}
+
+.clear {
+  position: absolute;
+  top: 24rpx;
+  right: 16rpx;
+  z-index: 999;
+  border: none;
+  font-size: 26rpx;
+  color: #3378e0;
+}
+
+.registerNum  .clearOn {
+  background: #fff;
+  color: grey;
+}
+
+button[disabled][type="default"], wx-button[disabled]:not([type]) {
+  background: #fff;
+}
+
+.btnBox {
+  margin: 0 48rpx;
 }
