--- a/Weitianshi/pages/message/pushProject/pushProject.wxml
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxml
@@ -65,7 +65,8 @@
           </view>
         </block>
         <template is="hasNothing" data="{{emptyNumber:pushToList}}"></template>
-        <template is="theBottom"  wx:if="{{atBottom == true}}"></template>
+        <!-- <template is="isEmpty" data="{{emptyNumber:pushToList}}"></template> -->
+        <template is="theBottom" wx:if="{{atBottom == true}}"></template>
       </scroll-view>
     </swiper-item>
     <!--我推送的项目 -->
