--- a/Weitianshi/activitySignIn/pages/signUpList/signUpList.wxml
+++ b/Weitianshi/activitySignIn/pages/signUpList/signUpList.wxml
@@ -7,8 +7,10 @@
       <view class='investorCard'>
         <view class="t-investorColor" hover-class='t-hoverColor'>
           <template is='InvestorCard' data='{{item,user_id,user_mobile}}'></template>
-          <view class="t-alineHeight"></view>
-          <template is='cardBottom1' data='{{item,user_id,user_mobile}}'></template>
+          <view wx:if="{{user_id != item.user_id}}">
+            <view class="t-alineHeight"></view>
+            <template is='cardBottom1' data='{{item,user_id,user_mobile}}'></template>
+          </view>
         </view>
       </view>
     </block>
