--- a/Weitianshi/activitySignIn/pages/signIndentityCard/signIndentityCard.wxss
+++ b/Weitianshi/activitySignIn/pages/signIndentityCard/signIndentityCard.wxss
@@ -64,12 +64,12 @@
 }
 
 .activityMobile1 {
-  font-size: 12px;
+  font-size: 24rpx;
   color: #999;
 }
 
 .activityMobile2 {
-  font-size: 14px;
+  font-size: 28rpx;
   color: #333;
   margin-left: 32rpx;
 }
