更该恢复签到

--- a/Weitianshi/activitySignIn/pages/activityIdentitySuccess/activityIdentitySuccess.wxml
+++ b/Weitianshi/activitySignIn/pages/activityIdentitySuccess/activityIdentitySuccess.wxml
@@ -1,29 +1,29 @@
 <import src="/pages/Template/Template.wxml" />
 <scroll-view style="height:1108rpx;" scroll-y="true" bindscrolltolower='loadMore'>
   <image src="{{signIndentityCard}}" class="activityImg">
-    <image class="activityUrl" wx:if='{{userInfo.user_logo_url}}' src="{{userInfo.user_logo_url}}"></image>
+    <image class="activityUrl" wx:if='{{userInfo.avatar.user_avatar_url}}' src="{{userInfo.avatar.user_avatar_url}}"></image>
     <view class="activityUrl" wx:if='{{userInfo.user_logo_text}}'>{{userInfo.user_logo_text}}</view>
-    <view class="activityName">{{userInfo.user_name}}</view>
+    <view class="activityName">{{userInfo.user_real_name}}</view>
     <view class="activityCom">{{userInfo.user_company_name}}</view>
     <view class="activityMobile flex">
       <view class="activityMobile1">手机</view>
-      <view class="activityMobile2">{{userInfo.user_mobile}}</view>
+      <view class="activityMobile2" wx:if="{{userInfo.user_mobile}}">{{userInfo.user_mobile}}</view>
       <view wx:if="{{!userInfo.user_mobile}}" style="font-size:14px;color:#cccccc;">暂未填写</view>
     </view>
     <view class="activityChat flex">
       <view class="activityMobile1">微信</view>
-      <view class="activityMobile2">{{userInfo.user_wechat}}</view>
-      <view wx:if="{{!userInfo.user_wechat}}" style="font-size:14px;color:#cccccc;">暂未填写</view>
+      <view class="activityMobile2" wx:if="{{userInfo.user_wechat}}">{{userInfo.user_wechat}}</view>
+      <view wx:if="{{!userInfo.user_wechat}}" style="font-size:28rpx;color:#cccccc;margin-left:32rpx;">暂未填写</view>
     </view>
     <view class="activityMail flex">
       <view class="activityMobile1">邮箱</view>
       <view class="activityMobile2">{{userInfo.user_email}}</view>
-      <view wx:if="{{!userInfo.user_email}}" style="font-size:14px;color:#cccccc;">暂未填写</view>
+      <view wx:if="{{!userInfo.user_email}}" style="font-size:28rpx;color:#cccccc;">暂未填写</view>
     </view>
     <view class="activityCareer flex">
       <view class="activityMobile1">职位</view>
-      <view class="activityMobile2">{{userInfo.user_company_career}}</view>
-      <view wx:if="{{!userInfo.user_company_career}}" style="font-size:14px;color:#cccccc;">暂未填写</view>
+      <view class="activityMobile2" wx:if="{{userInfo.user_company_career}}">{{userInfo.user_company_career}}</view>
+      <view wx:if="{{!userInfo.user_company_career}}" style="font-size:28rpx;color:#cccccc;margin-left:32rpx;">暂未填写</view>
     </view>
     <view class="activityacName">{{activity.activity_title}}</view>
     <view class="activityacTime">{{activity.start_time || '暂时未定'}} ~ {{activity.end_time || '暂时未定'}}</view>
@@ -48,7 +48,6 @@
 <view style='height:128rpx;'></view>
 <!-- 操作按钮 -->
 <view class="activityBottom flex">
-  <button class="activityMeet" disabled='true' style='border-color:#ccc;' bindtap='goToActivityAgenda'>活动议程</button>
   <button class="activityWei" bindtap='goToIndex'>去微天使看看</button>
 </view>
 <!--报错  -->
