--- a/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxml
+++ b/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxml
@@ -1,155 +1,5 @@
-<!-- <view class='signBox'>
+<view class='signBox'>
 <image class="noIndentity" src='/img/img-meibaoming@2x.png'></image>
 <view class='noContent'>对不起，您还没有报名</view>
 <view class="JumpTo" bindtap='goToIndex'>去微天使看看</view>
-</view> -->
-<import src="/pages/Template/Template.wxml" />
-<!-- <include src='/utils/wxml/common' /> -->
-<!-- <view wx:if="{{nonet}}"> 
-<view class="classname">
-  <view class="visitCard flex" bindtap="writeNewThing" data-type="{{0}}" hover-class='t-hoverColor'>
-    <view class="personListTile">姓名*</view>
-    <view class="flex">
-      <view class="personListContent" wx:if="{{!user_info.user_real_name}}">请输入姓名</view>
-      <view class="personListContentAfter" wx:if="{{user_info.user_real_name}}">{{user_info.user_real_name}}</view>
-    </view>
-  </view>
-
-  <view class="teleBox">
-    <view class="userBox" hover-class='t-hoverColor'>
-      <view class="userPhoneContent flex" bindtap="writeNewThing" data-type="{{1}}">
-        <view class="personListTile">手机*</view>
-        <view class="flex">
-          <view class="personListContent" wx:if="{{!user_info.user_mobile}}">请输入手机号码</view>
-          <view class="personListContent" wx:if="{{user_info.user_mobile}}">{{user_info.user_mobile}}</view>
-        </view>
-      </view>
-    </view>
-    <view class="userBox" hover-class='t-hoverColor'>
-      <view class="userPhone flex" bindtap="writeNewThing" data-type="{{1}}">
-        <view class="personListTile">获取验证码</view>
-        <view class="flex">
-          <view class="personListContent" wx:if="{{!user_info.user_mobile}}">请输入手机号码</view>
-          <view class="personListContent" wx:if="{{user_info.user_mobile}}">{{user_info.user_mobile}}</view>
-        </view>
-      </view>
-    </view>
-  </view>
-  <view class="personList">
-    <view class="userBox" hover-class='t-hoverColor'>
-      <view class="userBrandContent flex" bindtap="writeNewThing" data-type="{{2}}">
-        <view class="personListTile">品牌</view>
-        <view class="flex">
-          <view class="personListContent" wx:if="{{!user_info.user_brand}}">请输入</view>
-          <view class="personListContentAfter" wx:if="{{user_info.user_brand}}">{{user_info.user_brand}}</view>
-        </view>
-      </view>
-    </view>
-    <view class="userBox" hover-class='t-hoverColor'>
-      <view class="userCompanyContent flex" bindtap="writeNewThing" data-type="{{3}}">
-        <view class="personListTile">公司*</view>
-        <view class="flex">
-          <view class="personListContent" wx:if="{{!user_info.user_company_name}}">请输入</view>
-          <view class="personListContentAfter" wx:if="{{user_info.user_company_name}}">{{user_info.user_company_name}}</view>
-        </view>
-      </view>
-    </view>
-    <view class="userBox" hover-class='t-hoverColor'>
-      <view class="userPositionContent flex" bindtap="writeNewThing" data-type="{{4}}">
-        <view class="personListTile">职位*</view>
-        <view class="flex">
-          <view class="personListContent" wx:if="{{!user_info.user_company_career}}">请输入</view>
-          <view class="personListContentAfter" wx:if="{{user_info.user_company_career}}">{{user_info.user_company_career}}</view>
-        </view>
-      </view>
-    </view>
-    <view class="userBox" hover-class='t-hoverColor'>
-      <view class="userEmailContent flex" bindtap="writeNewThing" data-type="{{5}}">
-        <view class="personListTile">邮箱</view>
-        <view class="flex">
-          <view class="personListContent" wx:if="{{!user_info.user_email}}">请输入</view>
-          <view class="personListContentAfter" wx:if="{{user_info.user_email}}">{{user_info.user_email}}</view>
-        </view>
-      </view>
-    </view>
-    <view class="userBox" hover-class='t-hoverColor'>
-      <view class="userWx flex" bindtap="writeNewThing" data-type="{{6}}">
-        <view class="personListTile">微信</view>
-        <view class="flex">
-          <view class="personListContent" wx:if="{{!user_info.user_wechat}}">请输入</view>
-          <view class="personListContentAfter" wx:if="{{user_info.user_wechat}}">{{user_info.user_wechat}}</view>
-        </view>
-      </view>
-    </view>
-  </view> -->
-
-
-<view id="companyInfo" wx:if="{{nonet}}">
-  <!--姓名  -->
-  <view class="boxStyle">
-    <view class="projectBoxContent flex noBorder bottomStyle">
-      <view class="projectTitle">姓名*</view>
-      <input placeholder="请输入" placeholder-style='color:#ccc' class="newBox" bindblur="name" maxlength="40" value="{{name}}" />
-    </view>
-  </view>
-  <!--手机  -->
-  <view class="boxStyle">
-    <view class="projectBoxContent flex {{telephone.length == 0 ? ' ' : 'bottomStyle noBorder'}}">
-      <view class="projectTitle">手机*</view>
-      <input placeholder="请输入" type="number" bindinput="checkPhone" bindconfirm="checkPhone" value="{{telephone}}" placeholder-style='color:#999' maxlength="40" class="newBox"  wx:if="{{user_id == 0}}"/>
-      <input wx:if="{{user_id}}" value="{{telephone}}" placeholder-style='color:#999' maxlength="40" class="newBox" disabled="true" />
-    </view>
-  </view>
-  <!--获取验证码  -->
-  <view class="boxStyle" wx:if="{{user_id == 0}}">
-    <view class="projectBoxContent flex bottomStyle noBorder">
-      <view class="projectTitle">获取验证码</view>
-      <view>
-        <input placeholder="请输入" placeholder-style='color:#ccc' class="newBoxs" maxlength="40" value="{{checkCode}}" bindblur="checkCode2" />
-        <button class="clear {{time =='1'?'clearOn':''}}" bindtap="checkCode" disabled="{{time == 1}}" loading="{{checking == 1}}">{{getCode}}</button>
-      </view>
-    </view>
-  </view>
-
-  <!--品牌  -->
-  <view class="boxStyle">
-    <view class="projectBoxContent flex">
-      <view class="projectTitle">品牌</view>
-      <input placeholder="请输入" placeholder-style='color:#ccc' class="newBox" bindblur="checkBrand" value="{{brand}}" maxlength="40" />
-    </view>
-  </view>
-  <!--公司  -->
-  <view class="boxStyle">
-    <view class="projectBoxContent flex">
-      <view class="projectTitle">公司*</view>
-      <input placeholder="请输入" placeholder-style='color:#ccc' class="newBox" maxlength="40" value="{{company}}" bindblur="company" />
-    </view>
-  </view>
-  <!--职位  -->
-  <view class="boxStyle">
-    <view class="projectBoxContent flex">
-      <view class="projectTitle">职位*</view>
-      <input placeholder="请输入" placeholder-style='color:#ccc' class="newBox" maxlength="40" value="{{position}}" bindblur="position" />
-    </view>
-  </view>
-  <!--邮箱  -->
-  <view class="boxStyle">
-    <view class="projectBoxContent flex">
-      <view class="projectTitle">邮箱</view>
-      <input placeholder="请输入" placeholder-style='color:#ccc' class="newBox" bindblur="checkEmail" value="{{email}}" />
-    </view>
-  </view>
-  <!--微信  -->
-  <view class="boxStyle">
-    <view class="projectBoxContent flex noBorder">
-      <view class="projectTitle">微信</view>
-      <input placeholder="请输入" placeholder-style='color:#ccc' class="newBox" bindblur="checkWechart" value="{{weChat}}" />
-    </view>
-  </view>
-
-  <!--错误提示-->
-  <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 </view>
-
-<!--保存  -->
-<template is="buttonTwo" data="{{text:'下一步',btnName:'pushInfo',disabled}}"></template>
