--- a/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxss
+++ b/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxss
@@ -1,255 +1,29 @@
-.visitCard {
-  background: #fff;
-  width: 91.5%;
-  height: 34rpx;
-  padding: 40rpx 32rpx;
-  justify-content: space-between;
-  margin-bottom: 30rpx;
-}
-
-.visitCardMessage {
-  font-size: 32rpx;
-  color: #333;
-  line-height: 32rpx;
-}
-
-.pushIdCard {
-  /* background: #ccc; */
-  border-radius: 4rpx;
-  width: 56rpx;
-  height: 44rpx;
-}
-
-.personList {
-  background: #fff;
-}
-
-.personListTile, .investListTile {
-  font-size: 32rpx;
-  color: #333;
-}
-
-.personListContent {
-  font-size: 28rpx;
-  color: #ccc;
-  text-align: right;
-  margin-right: 12rpx;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 480rpx;
-}
-
-.chooseContent {
-  font-size: 28rpx;
-  color: #ccc;
-  text-align: right;
-  margin-right: 12rpx;
-}
-
-.userBox, .investBox {
-  width: 100%;
-  height: 114rpx;
-  background: #fff;
-  line-height: 112rpx;
-}
-
-.userNameContent, .userPhoneContent, .userBrandContent, .userCompanyContent,
-.userPositionContent, .userEmailContent, .userDescribeContent, .investContent,
-.userWx, .userPhone {
-  justify-content: space-between;
-  margin: 0 32rpx;
-  border-bottom: 1rpx solid #e6e6e6;
-  height: auto;
-}
-
-.userDescribeContent {
-  border-bottom: none;
-}
-
-.arrowStyle {
-  margin-top: 47rpx;
-  width: 12rpx;
-  height: 20rpx;
-}
-
-.choice:first-child {
-  margin-top: 28rpx;
-}
-
-/* .choice:last-child {
-  margin-bottom: 152rpx;
-} */
-
-/*提示  */
-
-.point {
-  font-size: 24rpx;
-  color: #666;
-  letter-spacing: 0;
-  line-height: 94rpx;
-  text-align: left;
-  height: 94rpx;
-  margin-left: 36rpx;
-}
-
-.btn {
-  height: 88rpx;
-  width: 100%;
-  background: #40587a;
-  font-size: 32rpx;
-  color: #fff;
-  line-height: 88rpx;
+.signBox{
   text-align: center;
-  position: fixed;
-  /* top: 1126rpx; */
-  bottom: 0;
 }
-
-.personListContentAfter {
-  font-size: 28rpx;
-  color: #666;
-  margin-right: 12rpx;
-  text-align: right;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 480rpx;
-}
-
-.chooseAfter {
-  font-size: 28rpx;
-  color: #666;
-  margin-right: 12rpx;
-  text-align: right;
-}
-
-.investStyle {
-  font-size: 28rpx;
-  color: #666;
-  line-height: 112rpx;
-  text-align: right;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-right: 12rpx;
-}
-
-.overMore {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 470rpx;
-  /* display: inline-block; *//* flex-direction: row;
-  justify-content:flex-end;  */
-  float: right;
-  /* flex-wrap:nowrap;  */
-}
-
-.error {
-  background: rgba(0, 0, 0, 0.80);
-  border-radius: 4px;
+.noIndentity {
   text-align: center;
-  position: fixed;
-  height: 45rpx;
-  line-height: 45rpx;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  padding: 16rpx 32rpx;
-  font-size: 28rpx;
-  color: #fff;
+  width: 200rpx;
+  height: 200rpx;
+  margin: 0 auto;
+  margin-top:198rpx;
 }
 
-.teleBox {
-  margin-bottom: 16rpx;
+.noContent {
+  font-size: 30rpx;
+  color: #999;
+  text-align: center;
+  margin: 24rpx 0 82rpx 0;
 }
 
-.userPhone {
-  border: none;
-}
-
-.personList .userWx {
-  border: none;
-}
-
-/*  */
-
-.projectBoxContent {
-  justify-content: space-between;
-  margin: 0 32rpx;
-  height: 114rpx;
-  border-bottom: 1rpx solid #f0f0f0;
-  position: relative;
-}
-
-.noBorder {
-  border: none;
-}
-
-.projectTitle {
-  font-size: 32rpx;
-  color: #333;
-  line-height: 112rpx;
-}
-
-.newBoxs {
-  text-align: right;
-  height: 112rpx;
-  line-height: 112rpx;
-  font-size: 28rpx;
-  color: #333;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  margin-right: 200rpx;
-}
-
-.newBox {
-  text-align: right;
-  height: 112rpx;
-  line-height: 112rpx;
-  /* width: 536rpx; */
-  font-size: 28rpx;
-  color: #333;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.boxStyle {
-  background: #fff;
-}
-
-.bottomStyle {
-  margin-bottom: 24rpx;
-}
-
-/*验证码按钮*/
-
-.getCode {
-  position: absolute;
-}
-
-.clear {
-  position: absolute;
-  top: 24rpx;
-  right: 16rpx;
-  z-index: 999;
-  border: none;
-  font-size: 26rpx;
+.JumpTo {
+  border: 1rpx solid #3378e0;
+  border-radius: 102rpx;
+  width: 294rpx;
+  height: 86rpx;
+  line-height: 86rpx;
+  font-size: 30rpx;
   color: #3378e0;
-}
-
-.registerNum  .clearOn {
-  background: #fff;
-  color: grey;
-}
-
-button[disabled][type="default"], wx-button[disabled]:not([type]) {
-  background: #fff;
-}
-
-.btnBox {
-  margin: 0 48rpx;
+  text-align: center;
+  margin: 0 auto;
 }
