--- a/Weitianshi/pages/my/my/my.wxml
+++ b/Weitianshi/pages/my/my/my.wxml
@@ -1,7 +1,7 @@
 <import src="/pages/Template/Template.wxml" />
 <include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
-  <view class="entryBox flex" wx:if="{{!user}}" bindtap='entry' hover-class='t-hoverColor'>
+  <view class="entryBox flex" wx:if="{{!user_id}}" bindtap='entry' hover-class='t-hoverColor'>
     <view class="user_left">
       <image class="user_pic" src="/img/img-touxiang@2x.png"></image>
     </view>
@@ -10,7 +10,7 @@
       <label class='entryContent'>登录只需1秒，就能体验更多功能</label>
     </view>
   </view>
-  <view wx:if="{{user}}">
+  <view wx:if="{{user_id}}">
     <view class="myInfo flex" bindtap='toMyCard' hover-class='t-hoverColor'>
       <view class="user_left" catchtap='avatarEdit'>
         <image wx:if="{{user.user_avatar_url}}" class="user_pic" src="{{user.user_avatar_url}}"></image>
