--- a/Weitianshi/pages/my/my/my.wxml
+++ b/Weitianshi/pages/my/my/my.wxml
@@ -146,8 +146,8 @@
     <view class="aline"></view>
     <view class="blockInfo flex" bindtap="activity" hover-class="t-hoverColor">
       <view class="flex">
-        <image src="/img/icon-yuetan@2x.png" class="blockPic"></image>
-        <view class="blockTitle">活动详情</view>
+        <image src="/img/icon-huodong@2x.png" class="blockPic"></image>
+        <view class="blockTitle">我的活动</view>
       </view>
       <view class="flex">
         <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
