--- a/Weitianshi/activitySignIn/pages/activityIdentityInfo/activityIdentityInfo.wxml
+++ b/Weitianshi/activitySignIn/pages/activityIdentityInfo/activityIdentityInfo.wxml
@@ -10,14 +10,14 @@
   </view>
   <!--手机  -->
   <view class="boxStyle">
-    <view class="projectBoxContent flex {{telephone.length == 0 ? ' ' : 'bottomStyle noBorder'}}">
+    <view class="projectBoxContent flex {{user_id == 0 ? ' ' : 'bottomStyle noBorder'}}">
       <view class="projectTitle">手机*</view>
       <input placeholder="请输入" type="number" bindinput="checkPhone" bindconfirm="checkPhone" value="{{telephone}}" placeholder-style='color:#999' maxlength="40" class="newBox" wx:if="{{user_id == 0}}" />
       <input wx:if="{{user_id}}" value="{{telephone}}" placeholder-style='color:#999' maxlength="40" class="newBox" disabled="true" />
     </view>
   </view>
   <!--获取验证码  -->
-  <view class="boxStyle">
+  <view class="boxStyle"  wx:if="{{user_id == 0}}">
     <view class="projectBoxContent flex bottomStyle noBorder">
       <view class="projectTitle">获取验证码</view>
       <view>
